--- a/front/src/index.html
+++ b/front/src/index.html
@@ -16,10 +16,14 @@
             { page: "PrivacyPolicy", text: "Privacy policy" },
             { page: "LogsPage", text: "Show technical logs" }
         ]
+        // The page mapping
+        window.pageModules = PUT_PAGEMAP_HERE
     </script>
     <!-- Load the application -->
-    <link rel="stylesheet" href="./app.css" />
-    <script type="module" src="./app.js"></script>
+    <!-- <link rel="stylesheet" href="./app.css" />
+    <script type="module" src="./app.js"></script> -->
+    <link rel="stylesheet" href="PUT_APP_CSS_NAME_HERE" />
+    <script type="module" src="PUT_APP_JS_NAME_HERE"></script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
