--- a/front/src/index.html
+++ b/front/src/index.html
@@ -4,11 +4,11 @@
 <head>
     <script>
         // Set here the default home page for the app, before loading app.js
-        window.homePage = "MicroWallet"
+        window.homePage = "ScanQrPage"
         // Configure the menu items, with entries like:
         //    {page:"NameOfPage", text:"Text in menu item", params: object to pass to page}
         window.menuItems = [
-            { page: "Microwallet", text: "Home", params: "" },
+            { page: "SIOPSelectCredential", text: "Home", params: "" },
             { page: "ScanQrPage", text: "Scan QR", params: "" },
             { page: "SelectLanguage", text: "Language", params: "" },
             { page: "SelectCamera", text: "Camera" },
