Change Home page

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -8,7 +8,8 @@
         // Configure the menu items, with entries like:
         //    {page:"NameOfPage", text:"Text in menu item", params: object to pass to page}
         window.menuItems = [
-            { page: "SIOPSelectCredential", text: "Home", params: "" },
+            { page: "MicroWallet", text: "Home", params: "" },
+            { page: "SIOPSelectCredential", text: "Select", params: "" },
             { page: "ScanQrPage", text: "Scan QR", params: "" },
             { page: "SelectLanguage", text: "Language", params: "" },
             { page: "SelectCamera", text: "Camera" },
