--- a/front/src/index.html
+++ b/front/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <script>
         // Set here the default home page for the app, before loading app.js
-        window.homePage = "MicroWallet"
+        window.homePage = "AuthInit"
         // Configure the menu items, with entries like:
         //    {page:"NameOfPage", text:"Text in menu item", params: object to pass to page}
         window.menuItems = [
